--- a/templates/workflow.html
+++ b/templates/workflow.html
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="/moyenne-reads" class="card-link" style="text-decoration: none; color: inherit;">
+                <a href="/moyenne_reads" class="card-link" style="text-decoration: none; color: inherit;">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Calculer la moyenne des reads des cibles</h5>
@@ -146,7 +146,27 @@
                         </div>
                     </div>
                 </a>
-                <a href="/phred-quality" class="card-link" style="text-decoration: none; color: inherit;">
+                <a href="/cible_reads" class="card-link" style="text-decoration: none; color: inherit;">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Filtrage des reads selon les régions d'intérêt</h5>
+                            <p class="card-text">Ce workflow permet de filtrer les reads selon les régions d'intérêt depuis un fichier BAM trié et indéxé. Il vous faudra
+                                un fichier BED pour spécifier les régions d'intérêt.
+                            </p>
+                        </div>
+                    </div>
+                </a>
+                <a href="/reads_length" class="card-link" style="text-decoration: none; color: inherit;">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Filtrage des reads selon leur longueur</h5>
+                            <p class="card-text">Ce workflow permet de filtrer les reads selon leur longueur depuis un fichier BAM trié et indéxé. Cela est utile lorsque vous avez
+                                beaucoup de reads sur Alamut et que beaucoup d'entre eux ont une longueur qui ne vous intéresse pas.
+                            </p>
+                        </div>
+                    </div>
+                </a>
+                <a href="/phred_quality" class="card-link" style="text-decoration: none; color: inherit;">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Filtrage des reads selon le phred quality d'une position génomique</h5>
