--- a/templates/anomalie-structure.html
+++ b/templates/anomalie-structure.html
@@ -16,6 +16,7 @@
             background-color: #f8f9fa;
             font-family: Arial, sans-serif;
         }
+
         .navbar,
         .subnav {
             background-color: #fff;
@@ -59,7 +60,8 @@
                         <a class="nav-link active" href="#">Available Workflows</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/status">Analyses <span id="runningCount" class="badge bg-primary">2</span></a>
+                        <a class="nav-link" href="/status">Analyses <span id="runningCount"
+                                class="badge bg-primary">2</span></a>
                     </li>
                 </ul>
             </div>
@@ -72,8 +74,10 @@
                     aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="/">Home</a></li>
-                        <li class="breadcrumb-item active"><a href="/anomalie-structure">Anomalie de Structure Configuration</a></li>
-                        <li class="breadcrumb-item active" aria-current="page"><a href="/history-anomalie-structure">Historique</a>
+                        <li class="breadcrumb-item active"><a href="/anomalie-structure">Anomalie de Structure
+                                Configuration</a></li>
+                        <li class="breadcrumb-item active" aria-current="page"><a
+                                href="/history-anomalie-structure">Historique</a>
                         </li>
                     </ol>
                 </nav>
@@ -82,12 +86,18 @@
         </div>
         <form id="configForm">
             <div class="mb-3">
-                <label for="input_dir" class="form-label">Selectionnez votre fichier BAM qui est aligné et trié :</label>
-                <input type="text" class="form-control" id="input_dir" name="input_dir" placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/barcode01_sorted.bam" required>
+                <label for="input_dir" class="form-label">Selectionnez votre fichier BAM qui est aligné et trié
+                    :</label>
+                <input type="text" class="form-control" id="input_dir" name="input_dir"
+                    placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/barcode01_sorted.bam"
+                    required>
             </div>
             <div class="mb-3">
-                <label for="output_dir" class="form-label">Selectionnez votre dossier où vous voulez retrouver votre VCF :</label>
-                <input type="text" class="form-control" id="output_dir" name="output_dir" placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/GenomePilot" required>
+                <label for="output_dir" class="form-label">Selectionnez votre dossier où vous voulez retrouver votre VCF
+                    :</label>
+                <input type="text" class="form-control" id="output_dir" name="output_dir"
+                    placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/GenomePilot"
+                    required>
             </div>
             <button type="submit" class="btn btn-primary">Ajouter la configuration</button>
         </form>
@@ -103,6 +113,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            fetchConfigurations();
+        });
+
         document.getElementById('configForm').addEventListener('submit', function (e) {
             e.preventDefault();
             const formData = new FormData(this);
@@ -112,15 +126,13 @@
             }).then(response => response.json())
                 .then(data => {
                     if (data.success) {
-                        const configList = document.getElementById('configList');
-                        const newItem = document.createElement('li');
-                        newItem.className = 'list-group-item';
-                        newItem.textContent = `Input: ${formData.get('input_dir')}, Output: ${formData.get('output_dir')}`;
-                        configList.appendChild(newItem);
+                        console.log('Configuration added:', data.configurations);
+                        fetchConfigurations(); // Actualiser la liste après ajout
                     } else {
                         alert(data.message);
                     }
-                });
+                })
+                .catch(error => console.error('Error adding configuration:', error));
         });
 
 
@@ -130,7 +142,7 @@
             configurations.forEach((config, index) => {
                 const li = document.createElement('li');
                 li.className = 'list-group-item';
-                li.textContent = `Config ${index + 1}: ${config.output_dir} - ${config.input_dir}`;
+                li.textContent = `Config ${index + 1}: ${config.input_dir} - ${config.output_dir}`;
                 const deleteBtn = document.createElement('button');
                 deleteBtn.textContent = 'Delete';
                 deleteBtn.className = 'btn btn-danger btn-sm float-right';
@@ -141,28 +153,29 @@
         }
 
         function deleteConfiguration(index) {
-            fetch('/delete_config_anomamlie_structure', {
+            fetch('/delete_config_reads_length', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ index })
             }).then(response => response.json())
                 .then(result => {
                     if (result.success) {
-                        updateConfigList(result.configurations);
+                        fetchConfigurations(); // Actualiser la liste après suppression
                     } else {
                         alert('Failed to delete configuration');
                     }
-                });
+                })
+                .catch(error => console.error('Error deleting configuration:', error));
         }
 
-        document.addEventListener('DOMContentLoaded', function () {
+        function fetchConfigurations() {
             fetch('/get_configurations_anomalie_structure')
                 .then(response => response.json())
                 .then(configurations => {
                     updateConfigList(configurations);
                 })
                 .catch(error => console.error('Error loading configurations:', error));
-        });
+        }
     </script>
     <script>
         function generateAndShowScript() {
