--- a/templates/cible-reads.html
+++ b/templates/cible-reads.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filtrer le phred quality</title>
+    <title>Filtrer les reads selon les régions spécifiées</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism-okaidia.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.js"></script>
@@ -16,6 +16,7 @@
             background-color: #f8f9fa;
             font-family: Arial, sans-serif;
         }
+
         .navbar,
         .subnav {
             background-color: #fff;
@@ -59,7 +60,8 @@
                         <a class="nav-link active" href="#">Available Workflows</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/status">Analyses <span id="runningCount" class="badge bg-primary">2</span></a>
+                        <a class="nav-link" href="/status">Analyses <span id="runningCount"
+                                class="badge bg-primary">2</span></a>
                     </li>
                 </ul>
             </div>
@@ -72,42 +74,36 @@
                     aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="/">Home</a></li>
-                        <li class="breadcrumb-item active"><a href="/phred-quality">Phred Quality Configuration</a></li>
-                        <li class="breadcrumb-item active" aria-current="page"><a href="/history-phred-quality">Historique</a>
+                        <li class="breadcrumb-item active"><a href="/phred-quality">Régions Cibles Configuration</a>
+                        </li>
+                        <li class="breadcrumb-item active" aria-current="page"><a
+                                href="/history-phred-quality">Historique</a>
                         </li>
                     </ol>
                 </nav>
-                <h1 class="mb-4 flex-grow-1 text-center">Filtrage Phred Quality Configuration</h1>
+                <h1 class="mb-4 flex-grow-1 text-center">Filtrage Reads Régions Cibles Configuration</h1>
             </div>
         </div>
         <form id="configForm">
             <div class="mb-3">
                 <label for="input_file" class="form-label">Selectionnez votre fichier BAM qui est aligné, trié :</label>
-                <input type="text" class="form-control" id="input_file" name="input_file" placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/barcode01_aligned_sorted.bam" required>
+                <input type="text" class="form-control" id="input_file" name="input_file"
+                    placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/barcode01_aligned_sorted.bam"
+                    required>
             </div>
             <div class="mb-3">
-                <label for="output_dir" class="form-label">Selectionnez votre dossier où vous voulez retrouver votre fichier de sortie :</label>
-                <input type="text" class="form-control" id="output_dir" name="output_dir" placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/GenomePilot" required>
+                <label for="output_dir" class="form-label">Selectionnez votre dossier où vous voulez retrouver votre
+                    fichier de sortie :</label>
+                <input type="text" class="form-control" id="output_dir" name="output_dir"
+                    placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/GenomePilot"
+                    required>
             </div>
             <div class="mb-3">
-                <label for="chr" class="form-label"> Chromosome à partir duquel les reads sont analysés :</label>
-                <input type="text" class="form-control" id="chr" name="chr" placeholder="chr1" required>
-            </div>
-            <div class="mb-3">
-                <label for="pos1" class="form-label"> Première position génomique (base 1) pour vérifier la qualité du read :</label>
-                <input type="text" class="form-control" id="pos1" name="pos1" placeholder="112345" required>
-            </div>
-            <div class="mb-3">
-                <label for="pos2" class="form-label"> Seconde position génomique (base 1) pour vérifier la qualité du read :</label>
-                <input type="text" class="form-control" id="pos2" name="pos2" placeholder="122345" required>
-            </div>
-            <div class="mb-3">
-                <label for="phred_min" class="form-label"> Qualité Phred minimale requise aux deux positions pour conserver un read :</label>
-                <input type="text" class="form-control" id="phred_min" name="phred_min" placeholder="30" required>
-            </div>
-            <div class="mb-3">
-                <label for="logs" class="form-label"> Chemin vers le fichier log où les résultats du filtrage seront écrits :</label>
-                <input type="text" class="form-control" id="logs" name="logs" placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/GenomePilot" required>
+                <label for="bed_file" class="form-label">Selectionnez votre fichier BED qui contient vos régions cibles
+                    :</label>
+                <input type="text" class="form-control" id="bed_file" name="bed_file"
+                    placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/cibles.bed"
+                    required>
             </div>
             <button type="submit" class="btn btn-primary">Ajouter la configuration</button>
         </form>
@@ -130,7 +126,7 @@
         document.getElementById('configForm').addEventListener('submit', function (e) {
             e.preventDefault();
             const formData = new FormData(this);
-            fetch('/phred_quality', {
+            fetch('/cible_reads', {
                 method: 'POST',
                 body: formData
             }).then(response => response.json())
@@ -152,7 +148,7 @@
             configurations.forEach((config, index) => {
                 const li = document.createElement('li');
                 li.className = 'list-group-item';
-                li.textContent = `Config ${index + 1}: ${config.input_dir} - ${config.output_dir} - ${config.chr} - ${config.pos1} - ${config.pos2} - ${config.phred_min} - ${config.logs}`;
+                li.textContent = `Config ${index + 1}: ${config.input_file} - ${config.output_dir} - ${config.bed_file}`;
                 const deleteBtn = document.createElement('button');
                 deleteBtn.textContent = 'Delete';
                 deleteBtn.className = 'btn btn-danger btn-sm float-right';
@@ -163,7 +159,7 @@
         }
 
         function deleteConfiguration(index) {
-            fetch('/delete_config_phred_quality', {
+            fetch('/delete_config_cible_reads', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ index })
@@ -179,7 +175,7 @@
         }
 
         function fetchConfigurations() {
-            fetch('/get_configurations_phred_quality')
+            fetch('/get_configurations_cible_reads')
                 .then(response => response.json())
                 .then(configurations => {
                     updateConfigList(configurations);
@@ -189,7 +185,7 @@
     </script>
     <script>
         function generateAndShowScript() {
-            fetch('/generate_phred_quality_script')
+            fetch('/generate_cible_reads_script')
                 .then(response => response.json())
                 .then(data => {
                     const codeBlock = document.getElementById('scriptArea');
@@ -201,12 +197,12 @@
     </script>
     <script>
         function downloadScript() {
-            window.location.href = '/download_phred_quality_script';
+            window.location.href = '/download_cible_reads_script';
         }
     </script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            var socket = io.connect('http://172.16.102.219:5000/test');
+            var socket = io.connect('http://172.16.102.219:5000/cible_reads');
             console.log('Socket.IO status:', typeof io);
 
             var runButton = document.getElementById('runScriptButton');
